Fixed not showing the menu bar and in this page for responsive #215

--- a/themes/gauge_theme/static/css/theme.css
+++ b/themes/gauge_theme/static/css/theme.css
@@ -124,6 +124,11 @@ footer {
   left: 20px;
 }
 
+.left-sidebar-container nav.open > .fixed-docs-toc{
+  display: inline-block !important;
+  margin: 20px;
+}
+
 .sliding-nav.disabled {
   display: none;
 }
